[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://level_connections/22-65.tres" type="Resource" id=3]
[ext_resource path="res://level_connections/22-63.tres" type="Resource" id=4]
[ext_resource path="res://world/SaveStation.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/Boss3.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/BossMeter.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Level_22.gd" type="Script" id=8]
[ext_resource path="res://world/TileMap.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/altopixel.tres" type="DynamicFont" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 27 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[node name="Level_22" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( 0, 0, 65536, 1, 0, 327682, 2, 0, 458756, 3, 0, 458756, 4, 0, 458756, 5, 0, 458756, 6, 0, 458756, 7, 0, 458756, 8, 0, 458756, 9, 0, 458756, 10, 0, 458756, 11, 0, 458756, 12, 0, 458756, 13, 0, 458756, 14, 0, 458756, 15, 0, 458756, 16, 0, 458756, 17, 0, 458756, 18, 0, 458756, 19, 0, 458756, 20, 0, 458756, 21, 0, 458756, 22, 0, 458756, 23, 0, 458753, 24, 0, 458756, 25, 0, 458756, 26, 0, 458756, 27, 0, 458756, 28, 0, 458756, 29, 0, 458756, 30, 0, 458756, 31, 0, 458756, 32, 0, 458756, 33, 0, 458756, 34, 0, 458756, 35, 0, 458756, 36, 0, 327683, 37, 0, 2, 65536, 0, 65537, 65537, 0, 65538, 65559, 0, 262145, 65572, 0, 4, 65573, 0, 3, 131095, 0, 262145, 131108, 0, 4, 131109, 0, 3, 196631, 0, 262145, 196644, 0, 4, 196645, 0, 3, 262144, 0, 65536, 262145, 0, 2, 262167, 0, 262145, 262179, 0, 65536, 262180, 0, 131073, 262181, 0, 3, 327680, 0, 4, 327681, 0, 3, 327703, 0, 262145, 327712, 0, 524288, 327713, 0, 458756, 327714, 0, 458756, 327715, 0, 393216, 327716, 0, 131072, 327717, 0, 3, 393216, 0, 4, 393217, 0, 3, 393239, 0, 262145, 393246, 0, 524288, 393247, 0, 458756, 393248, 0, 524291, 393252, 0, 4, 393253, 0, 3, 458752, 0, 4, 458753, 0, 3, 458775, 0, 524290, 458776, 0, 458756, 458777, 0, 458756, 458778, 0, 458756, 458779, 0, 458756, 458780, 0, 458756, 458781, 0, 458756, 458782, 0, 524291, 458788, 0, 4, 458789, 0, 3, 524288, 0, 4, 524289, 0, 3, 524324, 0, 4, 524325, 0, 3, 589824, 0, 4, 589825, 0, 3, 589860, 0, 4, 589861, 0, 3, 655360, 0, 4, 655361, 0, 131076, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 327682, 655384, 0, 458756, 655385, 0, 458756, 655386, 0, 458756, 655387, 0, 458756, 655388, 0, 458756, 655389, 0, 458756, 655390, 0, 458756, 655391, 0, 458755, 655394, 0, 65536, 655395, 0, 1, 655396, 0, 131073, 655397, 0, 3, 720896, 0, 4, 720897, 0, 131075, 720898, 0, 65539, 720899, 0, 65539, 720900, 0, 65539, 720901, 0, 65539, 720902, 0, 65539, 720903, 0, 65539, 720904, 0, 65539, 720905, 0, 65539, 720906, 0, 65539, 720907, 0, 65539, 720908, 0, 65539, 720909, 0, 65539, 720910, 0, 65539, 720911, 0, 65539, 720912, 0, 65539, 720913, 0, 65539, 720914, 0, 65539, 720915, 0, 65539, 720916, 0, 65539, 720917, 0, 65539, 720918, 0, 65539, 720919, 0, 65538, 720930, 0, 4, 720931, 0, 0, 720932, 0, 0, 720933, 0, 3, 786432, 0, 4, 786433, 0, 3, 786465, 0, 65536, 786466, 0, 131073, 786467, 0, 0, 786468, 0, 0, 786469, 0, 3, 851968, 0, 4, 851969, 0, 3, 851972, 0, 458754, 851973, 0, 458756, 851974, 0, 458756, 851975, 0, 458756, 851976, 0, 458756, 851977, 0, 458756, 851978, 0, 458756, 851979, 0, 458756, 851980, 0, 458756, 851981, 0, 458756, 851982, 0, 458756, 851983, 0, 458756, 851984, 0, 458756, 851985, 0, 458756, 851986, 0, 458756, 851987, 0, 458756, 851988, 0, 458756, 851989, 0, 458756, 851990, 0, 458756, 851991, 0, 458756, 851992, 0, 458756, 851993, 0, 458756, 851994, 0, 458756, 851995, 0, 458756, 851996, 0, 458756, 851997, 0, 458756, 851998, 0, 458756, 851999, 0, 458756, 852000, 0, 458756, 852001, 0, 393216, 852002, 0, 65539, 852003, 0, 65539, 852004, 0, 131072, 852005, 0, 3, 917504, 0, 4, 917505, 0, 3, 917540, 0, 4, 917541, 0, 3, 983040, 0, 4, 983041, 0, 3, 983060, 0, 196612, 983065, 0, 196612, 983069, 0, 196612, 983072, 0, 196612, 983074, 0, 196612, 983076, 0, 4, 983077, 0, 3, 1048576, 0, 4, 1048577, 0, 131076, 1048578, 0, 2, 1048612, 0, 4, 1048613, 0, 3, 1114112, 0, 4, 1114113, 0, 0, 1114114, 0, 131076, 1114115, 0, 1, 1114116, 0, 2, 1114146, 0, 196612, 1114148, 0, 4, 1114149, 0, 3, 1179648, 0, 4, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 327680, 1179653, 0, 458756, 1179654, 0, 458756, 1179655, 0, 458756, 1179656, 0, 458756, 1179657, 0, 458756, 1179658, 0, 458756, 1179659, 0, 458756, 1179660, 0, 458756, 1179661, 0, 458756, 1179662, 0, 524289, 1179684, 0, 4, 1179685, 0, 3, 1245184, 0, 4, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 3, 1245198, 0, 524290, 1245199, 0, 524289, 1245220, 0, 4, 1245221, 0, 3, 1310720, 0, 4, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 131076, 1310725, 0, 1, 1310726, 0, 1, 1310727, 0, 1, 1310728, 0, 1, 1310729, 0, 1, 1310730, 0, 1, 1310731, 0, 1, 1310732, 0, 1, 1310733, 0, 2, 1310735, 0, 524290, 1310736, 0, 524289, 1310754, 0, 196612, 1310756, 0, 65537, 1310757, 0, 65538, 1376256, 0, 4, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 131076, 1376270, 0, 2, 1376272, 0, 524290, 1376273, 0, 458756, 1376274, 0, 458756, 1376275, 0, 524289, 1441792, 0, 4, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 131076, 1441807, 0, 2, 1441811, 0, 524290, 1441812, 0, 458756, 1441813, 0, 524289, 1507328, 0, 4, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 131076, 1507344, 0, 1, 1507345, 0, 1, 1507346, 0, 2, 1507349, 0, 393219, 1507350, 0, 1, 1507351, 0, 1, 1507352, 0, 1, 1507353, 0, 1, 1507354, 0, 1, 1507355, 0, 1, 1507356, 0, 1, 1507357, 0, 1, 1507358, 0, 1, 1507359, 0, 1, 1507360, 0, 1, 1507361, 0, 1, 1507362, 0, 1, 1507363, 0, 1, 1507364, 0, 1, 1507365, 0, 2, 1572864, 0, 65537, 1572865, 0, 65539, 1572866, 0, 65539, 1572867, 0, 65539, 1572868, 0, 65539, 1572869, 0, 65539, 1572870, 0, 65539, 1572871, 0, 65539, 1572872, 0, 65539, 1572873, 0, 65539, 1572874, 0, 65539, 1572875, 0, 65539, 1572876, 0, 65539, 1572877, 0, 65539, 1572878, 0, 65539, 1572879, 0, 65539, 1572880, 0, 65539, 1572881, 0, 65539, 1572882, 0, 327684, 1572883, 0, 458756, 1572884, 0, 458756, 1572885, 0, 393216, 1572886, 0, 65539, 1572887, 0, 65539, 1572888, 0, 65539, 1572889, 0, 65539, 1572890, 0, 65539, 1572891, 0, 65539, 1572892, 0, 65539, 1572893, 0, 65539, 1572894, 0, 65539, 1572895, 0, 65539, 1572896, 0, 65539, 1572897, 0, 65539, 1572898, 0, 65539, 1572899, 0, 65539, 1572900, 0, 65539, 1572901, 0, 65538 )

[node name="PlayerSpawn" parent="." index="2"]
position = Vector2( 47, 101 )

[node name="Door" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( -3, 18 )
rotation = 3.14159
connection = ExtResource( 3 )
next_level = "res://levels/Level_65.tscn"

[node name="Door2" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 231, 132 )
connection = ExtResource( 4 )
next_level = "res://levels/Level_63.tscn"

[node name="SaveStation" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 133, 131 )

[node name="BOSS3" parent="." index="6" instance=ExtResource( 6 )]
position = Vector2( 124, 52 )
collision_layer = 512
collision_mask = 512

[node name="boss_positions" type="Node2D" parent="." index="7"]

[node name="pos1" type="Position2D" parent="boss_positions" index="0"]
position = Vector2( 30, 53 )

[node name="pos5" type="Position2D" parent="boss_positions" index="1"]
position = Vector2( 74, 29 )

[node name="pos3" type="Position2D" parent="boss_positions" index="2"]
position = Vector2( 120, 53 )

[node name="BossMeter" parent="." index="8" instance=ExtResource( 7 )]

[node name="boss_trigger" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 2147483649

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss_trigger" index="0"]
position = Vector2( 40, 33 )
shape = SubResource( 1 )

[node name="DOOR" parent="." index="10" instance=ExtResource( 9 )]
visible = false
collision_layer = 0
tile_data = PoolIntArray( 131072, 0, 65536, 131073, 0, 2, 196608, 0, 65537, 196609, 0, 65538, 524311, 0, 65536, 524312, 0, 1, 524313, 0, 327682, 524314, 0, 458756, 524315, 0, 458756, 524316, 0, 458756, 524317, 0, 458755, 589847, 0, 65537, 589848, 0, 65539, 589849, 0, 65538 )

[node name="BombDropTrigger" type="Area2D" parent="." index="11"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombDropTrigger" index="0"]
position = Vector2( 31, 16 )
shape = SubResource( 2 )

[node name="BombDropTrigger2" type="Area2D" parent="." index="12"]
position = Vector2( 158, 2 )
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombDropTrigger2" index="0"]
position = Vector2( -40, 15 )
shape = SubResource( 2 )

[node name="bomb_drop_pos" type="Node2D" parent="." index="13"]

[node name="pos1" type="Position2D" parent="bomb_drop_pos" index="0"]
position = Vector2( 31, 16 )

[node name="pos2" type="Position2D" parent="bomb_drop_pos" index="1"]
position = Vector2( 118, 17 )

[node name="TOKEN" type="Label" parent="." index="14"]
visible = false
margin_left = 54.0
margin_top = 31.0
margin_right = 94.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.760784, 0.776471, 0.8, 0.701961 )
text = "TOKEN:
7KEJ+8A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="boss_died" from="BOSS3" to="." method="_on_BOSS3_boss_died"]
[connection signal="update_health" from="BOSS3" to="." method="_on_BOSS3_update_health"]
[connection signal="body_entered" from="boss_trigger" to="." method="_on_boss_trigger_body_entered"]
[connection signal="body_entered" from="BombDropTrigger" to="." method="_on_BombDropTrigger_body_entered"]
[connection signal="body_entered" from="BombDropTrigger2" to="." method="_on_BombDropTrigger_body_entered"]
